# CarND-Projects

./: .gitignore  .gitmodules  README.md
Exercises/Term2/MPC-Quizzes/mpc_to_line/: CMakeLists.txt
Exercises/Term2/MPC-Quizzes/mpc_to_line/src/: MPC.cpp  MPC.h  MPC1.cpp  matplotlibcpp.h
LaneLines-P1/: CAR DVR Front Camera.mp4.REMOVED.git-id  P1.ipynb  anokas-challenge-sol.mp4.REMOVED.git-id  anokas-challenge.mp4.REMOVED.git-id
P1-LaneLines/: P1.ipynb  README.md
P2-traffic-signs/: .gitattributes  Traffic_Signs_Recognition.html  signnames.csv
P2-traffic-signs/extra-data/: imagedata.csv
P3-Behavioral-Cloning/: ._drive_inception.py  ._sanitize_recover_data.py  .gitignore  Dataset-Analysis.ipynb  Inception-Test.ipynb  README.md  drive.py  drive_inception.py  model.py  model_1.json  model_2.json  model_3.json  model_3c_006.json  model_3c_01.json  model_3c_02.json  model_4.json  model_4b.json  model_4b1.json  model_4c1.json  model_4c2.json  model_5.json  model_5a.json  model_6.json  model_i1.json  my_model_003.json  preprocess.py  sanitize_recover_data.py  train_model.ipynb  vgg_01.json  vgg_weird.json
P3-Behavioral-Cloning/docs/: sdcnd-project03-tantony.tex
P3-Behavioral-Cloning/driving-data/: driving_lef.csv  driving_log.csv  driving_log_trimmed.csv  driving_right.csv  track1_lane.csv
P4-Advanced-Lane-Lines/: Project04.ipynb
Project01/: P1.ipynb
TensorFlow-L2/: lab.ipynb
labs/TensorFlow-L2/: multilayer_perceptron.py  solutions.ipynb
labs/keras-lab/: mnist_cnn.py  (+2 more)
traffic-signs/: Traffic_Signs_Recognition.html  Traffic_Signs_Recognition.ipynb
(+32 files in other folders)
